--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* overall formatting */
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +9,7 @@ body {
   background-color: #efeeee;
 }
 
+/* nav/header styling */
 .nav {
   width: 100vw;
   height: 100px;
@@ -58,6 +60,73 @@ body {
 .nav li:not(.logo):hover, .nav li:not(.logo):focus {
   color: orangered;
 }
+
+/* Profile Card Hover Effect Stylings */
+
+.container {
+    height: 100vh;
+    width: 100vw;
+    max-height: 800px;
+    max-width: 1280px;
+    min-height: 600px;
+    min-width: 1000px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+}
+  
+.border {
+    height: 369px;
+    width: 290px;
+    background: transparent;
+    border-radius: 10px;
+    transition: border 1s;
+    position: relative;
+}
+ 
+.border:hover {
+    border: 1px solid white;
+}
+    
+.card {
+    height: 379px;
+    width: 300px;
+    background: grey;
+    border-radius: 10px;
+    transition: background 0.8s;
+    overflow: hidden;
+    background: black;
+    box-shadow: 0 70px 63px -60px #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+.card0 {
+    background: url('https://i.imgur.com/PihmcZp.png') center center no-repeat;
+    background-size: 300px;
+}
+
+.card0:hover {
+    background: url('https://i.imgur.com/PihmcZp.png') top center no-repeat;
+    background-size: 600px;
+}
+    
+.card0 h2{
+    opacity: 1;
+    color: white;
+}
+      
+.icons {
+    opacity: 1;
+    color: white;
+}
+      
+
+/* footer styling */
 
 footer {
     background: #b1b1b1;
