--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #efeeee;
+  background-color: #efefee;
 }
 
 /* nav/header styling */
@@ -64,8 +64,8 @@ body {
 /* Profile Card Hover Effect Stylings */
 
 .container {
-    height: 100vh;
-    width: 100vw;
+    height: auto;
+    width: 85%;
     max-height: 800px;
     max-width: 1280px;
     min-height: 600px;
@@ -74,6 +74,8 @@ body {
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
+    margin-top: 50px;
+    border: 1px solid black;
 }
   
 .border {
@@ -106,18 +108,18 @@ body {
 
 
 .card0 {
-    background: url('https://i.imgur.com/PihmcZp.png') top center no-repeat;
-    background-size: 300px;
+    background: url('../images/Sweet-Treats.png') top center no-repeat;
+    background-size: 600px;
 }
 
 .card0:hover {
-    background: url('https://i.imgur.com/PihmcZp.png') center center no-repeat;
+    background: url('../images/Sweet-Treats.png') center center no-repeat;
     background-size: 600px;
 }
     
 .card0 h2{
     opacity: 1;
-    color: white;
+    color: black;
 }
 
 .card1 {
@@ -140,7 +142,6 @@ body {
     color: white;
 }
       
-
 /* footer styling */
 
 footer {
@@ -161,3 +162,91 @@ footer {
     padding: 0 3rem;
     list-style-type: none;
 }  
+
+/* clock styling */
+.clock {
+    width: 350px;
+	height: 350px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: url("https://i.postimg.cc/LX1nGGbf/clock.png");
+	background-size: cover;
+	border: 4px solid #e6e7ee;
+	border-radius: 50%;
+	box-shadow: 0 -15px 15px #fff,
+				inset 0 -15px 15px #fff,
+				0 15px 15px #b8b9be,
+				inset 0 15px 15px #b8b9be
+				
+}
+
+.clock::before {
+	content: '';
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	background: #fff;
+	border-radius: 50%;
+	z-index: 10000;
+}
+
+.clock .hour,
+.clock .min,
+.clock .sec {
+	position: absolute;
+}
+
+.clock .hour, .hr {
+	width: 160px;
+	height: 160px;
+}
+
+.clock .min, .mn {
+	width: 190px;
+	height: 190px;
+}
+
+.clock .sec, .sc {
+	width: 230px;
+	height: 230px;
+}
+
+.hr,
+.mn,
+.sc {
+	display: flex;
+	justify-content: center;
+	/*align-items: center;*/
+	border-radius: 50%;
+}
+
+.hr:before {
+	content: '';
+	position: absolute;
+	width: 8px;
+	height: 80px;
+	background: #F44336;
+	z-index: 10;
+	border-radius: 6px 6px 0 0;
+}
+
+.mn:before {
+	content: '';
+	position: absolute;
+	width: 4px;
+	height: 90px;
+	background:#607D8B;
+	z-index: 11;
+	border-radius: 6px 6px 0 0;
+}
+
+.sc:before {
+	content: '';
+	position: absolute;
+	width: 2px;
+	height: 150px;
+	background: #607D8B;
+	z-index: 12;
+	border-radius: 6px 6px 0 0;
+}    
